# fasterlio_multi

./: .gitignore  LICENSE  README.md  README_zh-CN.md
data/: README.md
docs/: system_architecture.dot
docs/benchmarks/: urbannav_real_gnss.csv  urbannav_synthetic_rtk.csv
src/faster-lio/: .gitignore  CMakeLists.txt  README.md
src/faster-lio/app/: run_mapping_offline.cc  run_mapping_online.cc
src/faster-lio/config/: velodyne_ulhk.yaml
src/faster-lio/launch/: mapping_velodyne_ulhk.launch
src/faster-lio/src/: laser_mapping.cc
src/faster_lio_gnss/: CMakeLists.txt  LICENSE  README.md  package.xml
src/faster_lio_gnss/config/: pose3_evaluation_aligned_visualization.rviz  pose3_online_visualization.rviz
src/faster_lio_gnss/launch/: pose3_fusion_live.launch  urbannav_final_test.launch  urbannav_synthetic_rtk_test.launch
src/faster_lio_gnss/scripts/: evaluation_aligned_path_replay.py  geodesy.py  online_ground_truth_replay.py  online_pose3_result_evaluator.py  synthetic_rtk_replay.py  trajectory_metrics.py
src/faster_lio_gnss/src/: nmea_replay_node.cpp  online_pose3_fusion_node.cpp
